# PartChecker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Algorithms/: Algorithms.cpp  Algorithms.hpp  Sobel.cpp  Sobel.hpp
Camera/: Camera.cpp  Camera.hpp
Part/: Part.cpp  Part.hpp
Part/Cutout/: Cutout.cpp  Cutout.hpp
